# myokr

./: .gitignore  Dockerfile  docker-compose.local.yml  local.Dockerfile  manage.py  pcconfig.py  pyproject.toml
.web/: pynecone.json
app/: __init__.py  app.py  constants.py  okr_gpt.py
app/components/: container.py  logo.py
app/middlewares/: session.py
app/models/: auth.py  okr.py
app/pages/: __init__.py  base.py  index.py  welcome.py  welcome_key_results.py  welcome_need_login.py  welcome_objective.py  welcome_save_complete.py
app/services/: auth.py
app/states/: okr.py
apps/auth_extended/: apps.py
apps/auth_extended/migrations/: 0001_initial.py
apps/auth_extended/models/: users.py
apps/example/: views.py
apps/example/templates/: page.html
assets/: base.css  font-faces.css
settings/: base.py
settings/environments/: development.py  local.py
urls/: __init__.py
utils/: gpt.py
