[tool.poetry]
name = "myokr"
version = "0.1.0"
description = ""
authors = ["molmoty <molmoty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pynecone = "^0.1.18"
black = {extras = ["d"], version = "^23.1.0"}
pymysql = "^1.0.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = 1